Made a few changes.

--- a/source/_themes/modern/layout.html
+++ b/source/_themes/modern/layout.html
@@ -1,5 +1,9 @@
 {%- extends "basic/layout.html" %}
 
+{% block extrahead %}
+    <link  href="//fonts.googleapis.com/css?family=Just+Me+Again+Down+Here:regular" rel="stylesheet" type="text/css" >
+    <link  href="//fonts.googleapis.com/css?family=Covered+By+Your+Grace:regular" rel="stylesheet" type="text/css" >
+{% endblock %}
 
 {% block relbar1 %}{% endblock %}
 {% block relbar2 %}{% endblock %}
