--- a/source/_themes/modern/layout.html
+++ b/source/_themes/modern/layout.html
@@ -1,8 +1,10 @@
 {%- extends "basic/layout.html" %}
 
 {% block extrahead %}
-    <link  href="//fonts.googleapis.com/css?family=Just+Me+Again+Down+Here:regular" rel="stylesheet" type="text/css" >
-    <link  href="//fonts.googleapis.com/css?family=Covered+By+Your+Grace:regular" rel="stylesheet" type="text/css" >
+    <link  href="http://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here:regular" rel="stylesheet" type="text/css" >
+    <link  href="http://fonts.googleapis.com/css?family=Covered+By+Your+Grace:regular" rel="stylesheet" type="text/css" >
+    <link href='http://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block relbar1 %}{% endblock %}
