Added new content.
--HG--
branch : new-content

--- a/source/_themes/modern/layout.html
+++ b/source/_themes/modern/layout.html
@@ -19,7 +19,7 @@
 
 {% block document %}
 <p style="font-size: 15pt; font-weight: bold; border: 1px solid black; padding: 0.3em 0.3em 0.3em 0.3em">
-Hi there! We're rewriting these help files for Sublime Text 2, but Jon's too damn fast for us! So be warned: specific details in some topics only apply for Sublime Text 1.x.
+Hi there! We're rewriting these help files for Sublime Text 2, so be warned: specific details in some topics only apply for Sublime Text 1.x.
 </p>
 
 {{ super() }}
