Changed layout slightly.

--- a/source/_themes/modern/layout.html
+++ b/source/_themes/modern/layout.html
@@ -18,5 +18,5 @@
 {% endblock %}
 
 {% block relbar1 %}
-<div class="lang_bar">Switch Language: <a href="http://sublimetext.info/docs/es/{{pagename}}.html">Spanish</a></div>
+<div class="lang_bar">Switch Language: <a href="http://sublimetext.info/docs/es/{{pagename}}.html">Español</a></div>
 {{ super() }} {% endblock %}
