--- a/source/_themes/modern/layout.html
+++ b/source/_themes/modern/layout.html
@@ -17,6 +17,5 @@
 </script>
 {% endblock %}
 
-{% block relbar1 %}
-<div class="lang_bar">Switch Language: <a href="http://sublimetext.info/docs/es/{{pagename}}.html">Español</a></div>
-{{ super() }} {% endblock %}
+{% block relbar1 %} {% endblock %}
+{% block relbar2 %} {% endblock %}
