--- a/source/_themes/modern/relations.html
+++ b/source/_themes/modern/relations.html
@@ -1,1 +1,4 @@
-<a href="{{ pathto(master_doc) }}">Contents</a>
+<ul class="main-locations">
+	<li><a href="{{ pathto('overview') }}">Overview</a></li>
+	<li><a href="{{ pathto(master_doc) }}">Table of Contents</a></li>
+</ul>
